[package]
name = "nft-escrow-classic"
version = "0.0.1"
authors = ["Nicolas KOWALSKI <kowalski.kowalskin@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
#CosmWasm 
cw-storage-plus = "0.9.0"
cw20-base = { version = "0.9.0", features = ["library"] }
cosmwasm-std = { version = "0.16.0" }

#Other Modules
terra-cosmwasm = { version = "2.2" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
anyhow = "1.0"

# Local modules
escrow-export-classic = { path = "../../packages/escrow1.0", version = "0.0.1" }


[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
