[package]
name = "nft-escrow"
version = "0.1.0"
authors = ["Nicolas KOWALSKI <kowalski.kowalskin@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
#CosmWasm 
cw-storage-plus = "0.13.0"
cw20-base = { version = "0.13.0", features = ["library"] }
cosmwasm-std = { version = "1.0.0" }

#Other Modules
terra-cosmwasm = { version = "2.2" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
anyhow = "1.0"

#Local Modules
escrow-export = { path = "../../packages/escrow", version = "0.1.0" }
utils = { path = "../../packages/utils", version = "0.1.0" }


[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
