[package]
name = "randomness_verifier"
version = "0.9.0"
authors = ["Nicolas KOWALSKI <kowalski.kowalskin@gmail.com>"]
edition = "2018"
description = "Basic implementation of a CosmWasm-20 compliant token"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
#CosmWasm
cosmwasm-std = { version = "1.0.0" }

#Other Modules
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
drand-verify = "0.1"
rustc-serialize = "0.3.24"

# Local Modules
raffles-export = { path = "../../packages/raffles", version = "0.1.0" }


[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
